--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   <link rel="stylesheet" href="pages/index.css">
   <title>Путешествия по России</title>
 </head>
-<body>
-  
+<body class="page">
+  <header class="header">
+    <img src="images/header-logo.svg" alt="Карта России в миниатюре" class="header__logo">
+    <div class="header__lang-links">
+      <a href="#" class="header__lang-link">Ru</a>
+      <a href="#" class="header__lang-link">En</a>
+    </div>
+  </header>
 </body>
 </html>
