--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <header class="header">
     <img src="images/header-logo.svg" alt="Карта России в миниатюре" class="header__logo">
     <div class="header__lang-links">
-      <a href="#" class="header__lang-link">Ru</a>
-      <a href="#" class="header__lang-link">En</a>
+      <button type="button" name="button" class="header__lang-link">Ru</button>
+      <button type="button" name="button" class="header__lang-link">En</button>
     </div>
   </header>
 </body>
