--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
       <img src="images/lead-polka.jpg" alt="Полка в поезде с видом из окна" class="lead__image">
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
+    <section class="intro">
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+      <div class="intro__list">
+        <p class="intro__description">Часовых поясов <span class="intro__span-accent">11</span></p>
+        <p class="intro__description">Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span></p>
+        <p class="intro__description">Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span></p>
+        <p class="intro__description">Природных заповедников <span class="intro__span-accent">105</span></p>
+        <p class="intro__description">Аэропортов <span class="intro__span-accent">241</span></p>
+      </div>
+    </section>
   </main>
 </body>
 </html>
