Добавление секции gallery

--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
         <p class="intro__description">Аэропортов <span class="intro__span-accent">241</span></p>
       </div>
     </section>
+    <section class="photo-grid">
+      <img src="images/photo-grid-train.jpg" alt="Вид из окна поезда" class="photo-grid__item">
+      <img src="images/photo-grid-atharva-tulsi.jpg" alt="Горы в облаках" class="photo-grid__item">
+      <img src="images/photo-grid-tuman.jpg" alt="Поле со стогом сена и собакой" class="photo-grid__item">
+      <img src="images/photo-grid-sochi.jpg" alt="Деревья в тумане" class="photo-grid__item">
+      <img src="images/photo-grid-arisa.jpg" alt="Машина на льду" class="photo-grid__item">
+      <img src="images/photo-grid-baikal.jpg" alt="Побережье с горами" class="photo-grid__item">
+      <img src="images/photo-grid-elbrus.jpg" alt="Горы в снегу" class="photo-grid__item">
+      <img src="images/photo-grid-kondratiev.jpg" alt="Бетоные конусы" class="photo-grid__item">
+      <img src="images/photo-grid-kamchatka-1.jpg" alt="Горы в тумане" class="photo-grid__item">
+      <img src="images/photo-grid-kamchatka-2.jpg" alt="Гора с лесом" class="photo-grid__item">
+      <img src="images/photo-grid-baikal-2.jpg" alt="Горы и побережье" class="photo-grid__item">
+      <img src="images/photo-grid-ergaki.jpg" alt="Горы в тумане" class="photo-grid__item">
+    </section>
   </main>
 </body>
 </html>
