--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
         </div>
       </div>
     </section>
+    <section class="border cover">
+      <h2 class="cover__title">До Байкала «на собаках»</h2>
+      <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay"></a>
+    </section>
   </main>
 </body>
 </html>
