--- a/index.html
+++ b/index.html
@@ -116,13 +116,23 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="footer__links">
-      <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-      <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-      <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
-      <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
-      <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
-    </div>
+    <ul class="footer__nav">
+      <li class="footer__links">
+        <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+      </li>
+      <li class="footer__links">
+        <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+      </li>
+      <li class="footer__links">
+        <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+      </li>
+      <li class="footer__links">
+        <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+      </li>
+      <li class="footer__links">
+        <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+      </li>
+    </ul>
     <p class="footer__copyright">&#169; 2020. Головина А.Г.</p>
   </footer>
 </body>
